--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.30.0",
     "html5-qrcode": "^2.3.8",
+    "jose": "^6.1.3",
     "lucide-react": "^0.563.0",
     "mongoose": "^9.1.5",
     "next": "16.1.6",
